--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -14,7 +14,7 @@
 }
 
 .projectList {
-  width: 70vw;
+  width: 100%;
   height: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -25,7 +25,7 @@
 
 .projectItem {
   border-radius: 15px;
-  width: 300px;
+  width: 400px;
   height: 300px;
   margin: 40px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
@@ -38,9 +38,9 @@
 }
 
 .projectItem .bgImage {
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  max-width: 100%;
   height: 200px;
   background-position: center;
   background-repeat: no-repeat;
