--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -8,9 +8,9 @@
 }
 
 .project h1 {
-  margin-top: 50px;
+  /* margin-top: 10px;  */
   color: #3e497a;
-  font-size: 35px;
+  font-size: 45px;
 }
 .project img {
   width: 700px;
