--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -1,6 +1,6 @@
 .project {
   width: 100%;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 100px); 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,4 +25,15 @@
 .project svg {
   font-size: 60px;
   color: #3e497a;
+}
+@media only screen and (max-width: 600px) {
+  .project {
+    width: 100%;
+    height: 100%;
+  }
+  .project h1 {
+  margin-top: 50px; 
+  color: #3e497a;
+  font-size: 40px;
+}
 }
