--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,15 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Nuosu SIL', serif;
   background-color: #f0f0f0;
 }
+
 
 body {
   padding: 0;
   margin: 0;
+  
 }
 @tailwind base;
 @tailwind components;
