--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,8 +1,8 @@
 .home {
   width: 100%;
   align-items: center;
-  font-family: "Arial", sans-serif;
-  color: #3e497a;
+  font-family: "Arial", sans-serif;  
+  color: #3e497a;  
 }
 
 .about {
@@ -18,7 +18,7 @@
 }
 
 .about h2 {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;  
   font-size: 80px;
   color: #e9d35b;
   height: 50px;
@@ -41,14 +41,13 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  /* background-color: #202325;  */
 }
 
 .skills h1 {
-  color: #a089ff;
+  color: #a089ff; 
 }
 .skills h2 {
-  color: #a089ff;
+  color: cadetblue;
 }
 .skills span {
   color: #a089ff;
