--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -16,8 +16,9 @@
 .navbar a {
   color: white;
   text-decoration: none;
-  margin: 20px;
+  margin: 10px;
   font-size: 25px;
+  color: #f3f1ff;
 }
 
 .toggleButton {
